# student-dropout-prediction

./: .gitignore  README.md  pyproject.toml
data/: reference_dataset.csv
data/processed/: current_data.csv
data/raw/: students.xlsx  students_csv.csv  students_scores.csv
models/: model.joblib
reports/: index.html
src/data/: process_data.py
src/models/: train_eval.py
src/serve/: api.py  random_row.json
src/validation/: evidently_test.py  my_validation.py
