[tool.poetry]
name = "preverjanje-vaj-blaz-cerpnjak"
version = "0.1.0"
description = ""
authors = ["Blaz Cerpnjak"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
keras = "^2.15.0"
evidently = "^0.4.20"
flask = "^3.0.3"
dvc = "^3.50.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
